src/test/ui/unique-object-noncopyable.stderr
error[E0599]: no method named `clone` found for struct `Box<dyn Foo>` in the current scope
  --> $DIR/unique-object-noncopyable.rs:24:16
   |
LL |   trait Foo {
   |   ---------
   |   |
   |   doesn't satisfy `dyn Foo: Clone`
   |   doesn't satisfy `dyn Foo: Sized`
...
LL |       let _z = y.clone();
   |                  ^^^^^ method not found in `Box<dyn Foo>`
   | 
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL |       fn clone(&self) -> Self;
   |          -----
   |          |
   |          the method is available for `Arc<Box<dyn Foo>>` here
   |          the method is available for `Rc<Box<dyn Foo>>` here
   | 
  ::: $SRC_DIR/alloc/src/boxed.rs:LL:COL
   |
LL | / pub struct Box<
LL | |     T: ?Sized,
LL | |     #[unstable(feature = "allocator_api", issue = "32838")] A: AllocRef = Global,
LL | | >(Unique<T>, A);
   | |________________- doesn't satisfy `Box<dyn Foo>: Clone`
   |
   = note: the method `clone` exists but the following trait bounds were not satisfied:
           `dyn Foo: Sized`
           which is required by `Box<dyn Foo>: Clone`
           `dyn Foo: Clone`
           which is required by `Box<dyn Foo>: Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
